Revert "[SONAR]"
This reverts commit 8a2341da03235ce123a053a62dc2a969c668b0bc.